[tool.poetry]
name = "many"
version = "0.5.2"
description = ""
authors = ["Kevin Hu <kevinhuwest@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/kevinhu/many"
repository = "https://github.com/kevinhu/many"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
numpy = "^1.19.1"
pandas = "^1.1.0"
scipy = "^1.5.2"
statsmodels = "^0.11.1"
tqdm = "^4.48.2"
matplotlib = "^3.3.0"
seaborn = "^0.10.1"
sklearn = "^0.0"
adjusttext = "^0.7.3"
flake8 = "^3.8.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.6.0"
pytest = "^5.2"
black = "^19.10b0"
isort = "^5.4.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
