[tool.poetry]
name = "many"
version = "0.6.5"
description = "Statistical methods for computing many correlations"
authors = ["Kevin Hu <kevinhuwest@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/kevinhu/many"
repository = "https://github.com/kevinhu/many"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
numpy = "^1.19.1"
pandas = "^1.1.0"
scipy = "^1.5.2"
statsmodels = ">=0.11.1,<0.13.0"
tqdm = "^4.48.2"
matplotlib = "^3.3.0"
sklearn = "^0.0"
adjusttext = "^0.7.3"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.7.0"
poethepoet = "^0.10.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
black = "black ./many"
isort = "isort ./many"
format = ["black","isort"]
lint = "pylint ./many"
