[tool.poetry]
name = "many"
version = "0.7.2"
description = "Statistical methods for computing many correlations"
authors = ["Kevin Hu <kevinhuwest@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/kevinhu/many"
repository = "https://github.com/kevinhu/many"

include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
scipy = "^1.13.0"
statsmodels = ">=0.14.1"
tqdm = "^4.66.2"
matplotlib = "^3.8.4"
adjusttext = "^1.1.1"
seaborn = "^0.11.0"
scikit-learn = "^1.4.1.post1"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
pylint = "^3.1.0"
poethepoet = "^0.10.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
black = "black ./many"
isort = "isort ./many"
format = ["black", "isort"]
lint = "pylint ./many"
